Updated Docker Images and fix issues